--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dish Cover Page 2</title>
+    <title>Dish Cover</title>
     <style>
         /* General Styles */
         body {
@@ -314,7 +314,7 @@
     <!-- Rectangular Box -->
     <div class="rectangular-box">
         <!-- Add content here if needed -->
-        <p></p>
+        <p>Loading dish name...</p>
     </div>
 
     <!-- Centered Image -->
@@ -332,7 +332,7 @@
         <!-- Dropdown Button 1 -->
         <button class="dropdown-button" onclick="toggleDropdown(1, this)">INGREDIENTI</button>
         <div class="dropdown-content" id="dropdown-content-1">
-            Contenuto del dropdown per l'opzione 1. Puoi aggiungere qui ulteriori dettagli o informazioni.
+            Loading ingredients...
         </div>
 
         <!-- Dropdown Button 2 -->
