css adjustments to ingredients list.

--- a/index2.html
+++ b/index2.html
@@ -219,6 +219,26 @@
 
         }
 
+        /* Style the ingredients list in the dropdown */
+        .dropdown-content ul {
+            list-style: none;
+            /* Remove the dots */
+            padding: 0;
+            margin: 0 auto;
+            font-family: 'Acumin Variable Concept', sans-serif;
+            /* Use Acumin Variable Concept font */
+            color: #932226;
+            /* Set font color */
+            text-align: center;
+            /* Center the list items */
+            font-size: 1.3rem;
+        }
+
+        .dropdown-content ul li {
+            margin: 0.5rem 0;
+            /* Optional: add vertical spacing between items */
+        }
+
         /* Show Dropdown Content */
         .dropdown-content.active {
             display: block;
